# badge-elfloader

./: .gitmodules  CMakeLists.txt  Kconfig
kernel/: CMakeLists.txt
kernel/src/: abicall.S  interrupt.S  kernel.cpp  kernel.hpp  trap.S
src/: abi.cpp  abi.hpp  badgeabi.h  badgert.h  progloader.cpp  progloader.hpp  runner.S  runner.cpp  runner.hpp
src/abi/: display.cpp  display.hpp  gpio.cpp  gpio.hpp  implicitops.cpp  implicitops.hpp  libc.cpp  libc.hpp  math.cpp  math.hpp  softfloat.cpp  softfloat.hpp  system.cpp  system.hpp
